--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   google_sign_in: ^6.3.0
+  google_identity_services_web: ^0.3.3
+  http: ^1.3.0
+  flutter_svg: ^2.0.17
+
+  flutter_launcher_icons: "^0.14.3"
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +69,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/google/light/
+    - assets/googlesvg/light/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
