--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_launcher_icons: "^0.14.3"
 
   get: ^4.7.2
   firebase_core: ^3.12.1
@@ -41,10 +42,11 @@ dependencies:
   cloud_firestore: ^5.6.5
   google_sign_in: ^6.3.0
   google_identity_services_web: ^0.3.3
-  http: ^1.3.0
-  flutter_svg: ^2.0.17
 
-  flutter_launcher_icons: "^0.14.3"
+  flutter_svg: ^2.0.17
+  flutter_dotenv: ^5.2.1
+  provider: ^6.1.4
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +72,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/google/light/
-    - assets/googlesvg/light/
+    - assets/google/
+    - assets/google_android/light/android_light_rd_na.svg
+    - assets/google_android/dark/android_dark_rd_na.svg
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
