--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,10 @@ dependencies:
   flutter_dotenv: ^5.2.1
   provider: ^6.1.4
   http: ^1.3.0
-
+  # library to use gravatar images (encoding and converting routes)
   crypto: ^3.0.6
+  # library to format dates from firebase
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
